feat(HourOfDay): allow config to set work days
Allow different contexts to set work days for offices with different
schedules than mon-fri

--- a/sample-config.json
+++ b/sample-config.json
@@ -16,6 +16,7 @@
         "timezone": "America/New_York"
       }
     ],
-    "hours_to_review": 6
+    "hours_to_review": 6,
+    "work_days": [1, 2, 3, 4]
   }
 }
