--- a/spec/support/vcr_cassettes/issues.yml
+++ b/spec/support/vcr_cassettes/issues.yml
@@ -21,7 +21,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 22 Aug 2018 00:12:12 GMT
+      - Wed, 22 Aug 2018 20:57:34 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -33,9 +33,9 @@ http_interactions:
       X-Ratelimit-Limit:
       - '60'
       X-Ratelimit-Remaining:
-      - '55'
+      - '57'
       X-Ratelimit-Reset:
-      - '1534899551'
+      - '1534974855'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
@@ -65,86 +65,13 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Runtime-Rack:
-      - '0.053959'
+      - '0.052085'
       X-Github-Request-Id:
-      - F4BD:6D09:1B62822:2364F72:5B7CAA5C
+      - C3CB:4CAF:68BAF:84D7F:5B7DCE3E
     body:
       encoding: ASCII-8BIT
       string: '{"url":"https://api.github.com/repos/ministrycentered/reviewbot/issues/3","repository_url":"https://api.github.com/repos/ministrycentered/reviewbot","labels_url":"https://api.github.com/repos/ministrycentered/reviewbot/issues/3/labels{/name}","comments_url":"https://api.github.com/repos/ministrycentered/reviewbot/issues/3/comments","events_url":"https://api.github.com/repos/ministrycentered/reviewbot/issues/3/events","html_url":"https://github.com/ministrycentered/reviewbot/pull/3","id":352619120,"node_id":"MDExOlB1bGxSZXF1ZXN0MjA5ODg1MzMz","number":3,"title":"Rspec
         setup","user":{"login":"awortham","id":6271986,"node_id":"MDQ6VXNlcjYyNzE5ODY=","avatar_url":"https://avatars0.githubusercontent.com/u/6271986?v=4","gravatar_id":"","url":"https://api.github.com/users/awortham","html_url":"https://github.com/awortham","followers_url":"https://api.github.com/users/awortham/followers","following_url":"https://api.github.com/users/awortham/following{/other_user}","gists_url":"https://api.github.com/users/awortham/gists{/gist_id}","starred_url":"https://api.github.com/users/awortham/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/awortham/subscriptions","organizations_url":"https://api.github.com/users/awortham/orgs","repos_url":"https://api.github.com/users/awortham/repos","events_url":"https://api.github.com/users/awortham/events{/privacy}","received_events_url":"https://api.github.com/users/awortham/received_events","type":"User","site_admin":false},"labels":[],"state":"open","locked":false,"assignee":null,"assignees":[],"milestone":null,"comments":0,"created_at":"2018-08-21T16:29:27Z","updated_at":"2018-08-21T16:29:27Z","closed_at":null,"author_association":"NONE","pull_request":{"url":"https://api.github.com/repos/ministrycentered/reviewbot/pulls/3","html_url":"https://github.com/ministrycentered/reviewbot/pull/3","diff_url":"https://github.com/ministrycentered/reviewbot/pull/3.diff","patch_url":"https://github.com/ministrycentered/reviewbot/pull/3.patch"},"body":null,"closed_by":null}'
     http_version: 
-  recorded_at: Wed, 22 Aug 2018 00:12:12 GMT
-- request:
-    method: get
-    uri: https://api.github.com/repos/ministrycentered/reviewbot/pulls/3/reviews?access_token=<TOKEN>
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/vnd.github.black-cat-preview+json
-      User-Agent:
-      - Faraday v0.12.2
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Wed, 22 Aug 2018 00:12:12 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Content-Length:
-      - '2'
-      Server:
-      - GitHub.com
-      Status:
-      - 200 OK
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4972'
-      X-Ratelimit-Reset:
-      - '1534896816'
-      Cache-Control:
-      - private, max-age=60, s-maxage=60
-      Vary:
-      - Accept, Authorization, Cookie, X-GitHub-OTP
-      - Accept-Encoding
-      Etag:
-      - '"fb83b8a2175c83e7be7cce2b66ade2f8"'
-      X-Oauth-Scopes:
-      - repo
-      X-Accepted-Oauth-Scopes:
-      - ''
-      X-Github-Media-Type:
-      - github.v3; param=black-cat-preview; format=json
-      Access-Control-Expose-Headers:
-      - ETag, Link, Retry-After, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining,
-        X-RateLimit-Reset, X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval
-      Access-Control-Allow-Origin:
-      - "*"
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Frame-Options:
-      - deny
-      X-Content-Type-Options:
-      - nosniff
-      X-Xss-Protection:
-      - 1; mode=block
-      Referrer-Policy:
-      - origin-when-cross-origin, strict-origin-when-cross-origin
-      Content-Security-Policy:
-      - default-src 'none'
-      X-Runtime-Rack:
-      - '0.068156'
-      X-Github-Request-Id:
-      - F4BE:6D07:5C1651:76875B:5B7CAA5C
-    body:
-      encoding: UTF-8
-      string: "[]"
-    http_version: 
-  recorded_at: Wed, 22 Aug 2018 00:12:12 GMT
+  recorded_at: Wed, 22 Aug 2018 20:57:34 GMT
 recorded_with: VCR 4.0.0
