--- a/spec/support/vcr_cassettes/reviews.yml
+++ b/spec/support/vcr_cassettes/reviews.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.github.com/repos/ministrycentered/reviewbot/pulls/3/reviews
+    uri: https://api.github.com/repos/ministrycentered/reviewbot/pulls/1/reviews
     body:
       encoding: US-ASCII
       string: ''
@@ -21,11 +21,11 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 22 Aug 2018 20:57:34 GMT
+      - Mon, 27 Aug 2018 16:58:45 GMT
       Content-Type:
       - application/json; charset=utf-8
-      Content-Length:
-      - '2'
+      Transfer-Encoding:
+      - chunked
       Server:
       - GitHub.com
       Status:
@@ -35,14 +35,14 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '56'
       X-Ratelimit-Reset:
-      - '1534974855'
+      - '1535392591'
       Cache-Control:
       - public, max-age=60, s-maxage=60
       Vary:
       - Accept
       - Accept-Encoding
       Etag:
-      - '"fb83b8a2175c83e7be7cce2b66ade2f8"'
+      - W/"9928f53c3947cf9a71e197d47593d8ca"
       X-Github-Media-Type:
       - github.v3; param=black-cat-preview; format=json
       Access-Control-Expose-Headers:
@@ -63,12 +63,12 @@ http_interactions:
       Content-Security-Policy:
       - default-src 'none'
       X-Runtime-Rack:
-      - '0.058364'
+      - '0.081216'
       X-Github-Request-Id:
-      - C3CC:4CB1:FD11B:141458:5B7DCE3E
+      - F5AA:64C6:1F33460:27A7792:5B842DC5
     body:
-      encoding: UTF-8
-      string: "[]"
+      encoding: ASCII-8BIT
+      string: '[{"id":147834038,"node_id":"MDE3OlB1bGxSZXF1ZXN0UmV2aWV3MTQ3ODM0MDM4","user":{"login":"glosie","id":5737,"node_id":"MDQ6VXNlcjU3Mzc=","avatar_url":"https://avatars1.githubusercontent.com/u/5737?v=4","gravatar_id":"","url":"https://api.github.com/users/glosie","html_url":"https://github.com/glosie","followers_url":"https://api.github.com/users/glosie/followers","following_url":"https://api.github.com/users/glosie/following{/other_user}","gists_url":"https://api.github.com/users/glosie/gists{/gist_id}","starred_url":"https://api.github.com/users/glosie/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/glosie/subscriptions","organizations_url":"https://api.github.com/users/glosie/orgs","repos_url":"https://api.github.com/users/glosie/repos","events_url":"https://api.github.com/users/glosie/events{/privacy}","received_events_url":"https://api.github.com/users/glosie/received_events","type":"User","site_admin":false},"body":"","state":"COMMENTED","html_url":"https://github.com/ministrycentered/reviewbot/pull/1#pullrequestreview-147834038","pull_request_url":"https://api.github.com/repos/ministrycentered/reviewbot/pulls/1","author_association":"MEMBER","_links":{"html":{"href":"https://github.com/ministrycentered/reviewbot/pull/1#pullrequestreview-147834038"},"pull_request":{"href":"https://api.github.com/repos/ministrycentered/reviewbot/pulls/1"}},"submitted_at":"2018-08-20T21:43:03Z","commit_id":"9a57c108c1a0c7fe619bc6f40e8998a3b9deeeec"},{"id":147834141,"node_id":"MDE3OlB1bGxSZXF1ZXN0UmV2aWV3MTQ3ODM0MTQx","user":{"login":"geolessel","id":385726,"node_id":"MDQ6VXNlcjM4NTcyNg==","avatar_url":"https://avatars1.githubusercontent.com/u/385726?v=4","gravatar_id":"","url":"https://api.github.com/users/geolessel","html_url":"https://github.com/geolessel","followers_url":"https://api.github.com/users/geolessel/followers","following_url":"https://api.github.com/users/geolessel/following{/other_user}","gists_url":"https://api.github.com/users/geolessel/gists{/gist_id}","starred_url":"https://api.github.com/users/geolessel/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/geolessel/subscriptions","organizations_url":"https://api.github.com/users/geolessel/orgs","repos_url":"https://api.github.com/users/geolessel/repos","events_url":"https://api.github.com/users/geolessel/events{/privacy}","received_events_url":"https://api.github.com/users/geolessel/received_events","type":"User","site_admin":false},"body":"","state":"COMMENTED","html_url":"https://github.com/ministrycentered/reviewbot/pull/1#pullrequestreview-147834141","pull_request_url":"https://api.github.com/repos/ministrycentered/reviewbot/pulls/1","author_association":"MEMBER","_links":{"html":{"href":"https://github.com/ministrycentered/reviewbot/pull/1#pullrequestreview-147834141"},"pull_request":{"href":"https://api.github.com/repos/ministrycentered/reviewbot/pulls/1"}},"submitted_at":"2018-08-20T21:43:26Z","commit_id":"9a57c108c1a0c7fe619bc6f40e8998a3b9deeeec"}]'
     http_version: 
-  recorded_at: Wed, 22 Aug 2018 20:57:35 GMT
+  recorded_at: Mon, 27 Aug 2018 16:58:45 GMT
 recorded_with: VCR 4.0.0
